Fixed min-state-turnout alignment.

--- a/app.css
+++ b/app.css
@@ -144,7 +144,7 @@ path:hover {
 
 #min-state-turnout {
     top: 150px;
-    right: 10px;
+    right: 55px;
 }
 
 #max-state-turnout {
